--- a/elektr.html
+++ b/elektr.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
     <title>Számítógépes rendszerek</title>
-    <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
+      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
       <h1>Számítógépes rendszerek</h1>
     </header>
 
@@ -23,15 +23,23 @@
 
       </aside>
       <section>
-        <h1>Fényképező & kamera</h1>
+        <h1>Programtanterv</h1>
+        <p><a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a></p>
 
-        <h3>Branch Education - Understanding Cameras & Optics</h3>
-        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=YX7CvW2XSqlvsy9F&amp;list=PL6rx9p3tbsMtyBSl6ihtZ5kv8Kuib3Hbu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+        <h1>Elektronika és robotika 10 leckében</h1>
+        <ol>
+          <li><a href="mikro/bevelektr.html">Mikroelektronika</a></li>
+          <li><a href="mikro/arduino.html">Arduino</a></li>
+          <li><a href="mikro/raspberry.html">Raspberry</a></li>
+          <li><a href="#">MicroBit</a></li>
+          <li><a href="mikro/robotika.html">Robotika</a></li>
+          <li><a href="mikro/dron.html">Drónok</a></li>
+        </ol>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="../static/cc.logo.large.png" alt="cc">
+      <img src="static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
