--- a/felh/opr.html
+++ b/felh/opr.html
@@ -1,63 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
+    <title>Számítógépes rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
-    <link rel="stylesheet" href="../static/mainindex.css">
-
-    <title>Operációs rendszerek</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--INTER FONT-->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;900&display=swap" rel="stylesheet">
-    <!--PHILOSOPHER FONT-->
-    <link href="https://fonts.googleapis.com/css2?family=Philosopher:wght@700&display=swap" rel="stylesheet">
-    <!--JULIUS SANS ONE FONT-->
-    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto:wght@100&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="header">
-      <header>
-        <h1><a href="../index.html" title="Kezdőlap">Palkotikum</a></h1>
-        <h2>TECHNOLOGIES</h2>
-      </header>
-      
-    </div>
-
-    <div id="cim">
-      <h1>Operációs rendszerek</h1>
-    </div>
+    <header>
+      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
+      <h1>Számítógépes rendszerek</h1>
+    </header>
 
     <main>
+      <aside>
+
+      </aside>
       <section>
-        <aside>
-          <h2>Operációs rendszerek</h2>
-          <p><a href="../ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
-          <p><a href="../ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></p>
-          <p><a href="../ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></p>
-          <p><a href="../ptt/linux.html">Linux alapok (7+11 óra)</a></p>
-          <p><a href="#">Linux alapismeretek (irodai informatikus)</a></p>
-        </aside>
-        <article>
-          <a href="../rendszer/os.html">Operációs rendszerek</a>
-          <a href="../rendszer/fajl.html">Fájlok, fájlrendszerek</a>
-          <a href="../rendszer/segedpr.html">Segédprogramok</a>
-          <a href="../rendszer/windows.html">Windows</a>
-          <a href="../rendszer/linux.html">Linux</a>
-          <a href="../rendszer/android.html">Android</a>
-          <a href="../rendszer/unix.html">Unix</a>
-          <a href="../rendszer/virt.html">Virtuális gépek és konténerek</a>
-        </article>
+        <section>
+          <aside>
+            <h2>Operációs rendszerek</h2>
+            <p><a href="../ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
+            <p><a href="../ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></p>
+            <p><a href="../ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></p>
+            <p><a href="../ptt/linux.html">Linux alapok (7+11 óra)</a></p>
+            <p><a href="#">Linux alapismeretek (irodai informatikus)</a></p>
+          </aside>
+          <article>
+            <a href="../rendszer/os.html">Operációs rendszerek</a>
+            <a href="../rendszer/fajl.html">Fájlok, fájlrendszerek</a>
+            <a href="../rendszer/segedpr.html">Segédprogramok</a>
+            <a href="../rendszer/windows.html">Windows</a>
+            <a href="../rendszer/linux.html">Linux</a>
+            <a href="../rendszer/android.html">Android</a>
+            <a href="../rendszer/unix.html">Unix</a>
+            <a href="../rendszer/virt.html">Virtuális gépek és konténerek</a>
+          </article>
+        </section>
       </section>
     </main>
     <footer>
-      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
+      <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
