--- a/index.html
+++ b/index.html
@@ -1,126 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
+    <title>Számítógépes rendszerek</title>
     <link rel="stylesheet" href="static/main.css">
-    <link rel="stylesheet" href="static/mainindex.css">
-
-    <title>Palkotikum</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--INTER FONT-->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;900&display=swap" rel="stylesheet">
-    <!--PHILOSOPHER FONT-->
-    <link href="https://fonts.googleapis.com/css2?family=Philosopher:wght@700&display=swap" rel="stylesheet">
-    <!--JULIUS SANS ONE FONT-->
-    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Roboto:wght@100&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="header">
-      <header>
-        <h1>Palkotikum</h1>
-        <h2>TECHNOLOGIES</h2>
-      </header>
-    </div>
+    <header>
+      <a href="#"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+      <h1>Számítógépes rendszerek</h1>
+    </header>
 
-    <div id="cim">
-      <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
-      <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák. Megismerheted a számítógépes architektúrákat, az operációs rendszereket, az irodai szoftvereket, továbbá olyan egzotikumokat, mint a mesterséges intelligencia, mikrokontrollerek és okoseszközök.</p>
-    </div>
 
     <main>
+      <aside>
+        <nav>
+          <ul>
+            <li><a href="elm.html">Elmélet</a></li>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+          </ul>
+        </nav>
+      </aside>
       <section>
-        <aside>
-          <h2>Elmélet 10 leckében</h2>
-          <ol>
-            <li><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></li>
-            <li><a href="hardver/binary.html">Számrendszerek</a></li>
-            <li><a href="hardver/nummat.html">Numerikus matematika 1.</a></li>
-            <li><a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></li>
-            <li><a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></li>
-            <li><a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></li>
-            <li><a href="kozpontiegyseg/cpu.html">CPU</a></li>
-            <li><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></li>
-          </ol>
-        </aside>
-        <article>
-          <a href="okt/okt.html">Oktatási anyagok</a>
-          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
-          <a href="hardver/r.html">Numerikus programozás</a>
-          <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a>
-          <a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a>
-          <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a>
-        </article>
-      </section>
 
-      <section>
-        <aside>
-          <h2>Felhasználói ismeretek</h2>
-        </aside>
-        <article>
-          <a href="felh/pcbegin.html">Személyi számítógép</a>
-          <a href="felh/opr.html">Operációs rendszerek</a>
-          <a href="felh/office.html">Irodai szoftverek</a>
-          <a href="vizsgak.html" class="fekete">Vizsgák</a>
-        </article>
-      </section>
-
-      <section>
-        <aside>
-          <h2>Mesterséges intelligencia 10 leckében</h2>
-          <ol>
-            <li><a href="#">Statisztikai alapok</a></li>
-            <li><a href="mestint/ai.html">Mesterséges intelligencia</a></li>
-            <li><a href="mestint/ml.html">Gépi tanulás</a></li>
-            <li><a href="mestint/nn.html">Neuronhálózatok</a></li>
-            <li><a href="mestint/pyai.html">Python nyelven</a></li>
-            <li><a href="#">Szöveg generálása, ChatGPT</a></li>
-            <li><a href="#">Kép generálása, Tengr.ai</a></li>
-            <li><a href="#">Szuperszámítógép</a></li>
-            <li><a href="#">Kvantumszámítógép</a></li>
-          </ol>
-        </aside>
-        <article>
-          <p><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></p>
-        </article>
-      </section>
-
-      <section>
-        <aside>
-          <h2>Okoseszközök</h2>
-        </aside>
-        <article>
-          <a href="okos/okostelefon.html">Okostelefonok</a>
-          <a href="#">Okosóra</a>
-          <a href="#">Okosotthon</a>
-        </article>
-      </section>
       
       <section>
-        <aside>
-          <h2>Elektronika és robotika 10 leckében</h2>
-          <ol>
-            <li><a href="mikro/bevelektr.html">Mikroelektronika</a></li>
-            <li><a href="mikro/arduino.html">Arduino</a></li>
-            <li><a href="mikro/raspberry.html">Raspberry</a></li>
-            <li><a href="#">MicroBit</a></li>
-            <li><a href="mikro/robotika.html">Robotika</a></li>
-            <li><a href="mikro/dron.html">Drónok</a></li>
-          </ol>
-        </aside>
-        <article>
-          <a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a>
-        </article>
+        <h1>Bemutatkozás</h1>
+        <h2>Felhasználói ismeretek</h2>
+
+        <p><a href="felh/pcbegin.html">Személyi számítógép</a></p>
+        <p><a href="felh/opr.html">Operációs rendszerek</a></p>
+        <p><a href="felh/office.html">Irodai szoftverek</a></p>
+        <p><a href="vizsgak.html" class="fekete">Vizsgák</a></p>
+
+        <h2>Okoseszközök</h2>
+
+        <p><a href="okos/okostelefon.html">Okostelefonok</a></p>
+        <p><a href="#">Okosóra</a></p>
+        <p><a href="#">Okosotthon</a></p>
       </section>
     </main>
     <footer>
-      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
+      <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
