--- a/index.html
+++ b/index.html
@@ -35,59 +35,142 @@
     </div>
 
     <main>
-      <aside></aside>
       <section id="bemutat">
-        <div class="jobb">
-          <div>
-            <h1>Számítógép-tudomány</h1>
-            <p>Fedezze fel a számítógépes architektúrák világát, ahol a számítógépek működésének alapelveit és felépítését ismerheti meg. Oldalunkon részletes útmutatókat talál a processzorok, memóriarendszerek és más hardverkomponensek működéséről, hogy mélyebb betekintést nyerhessen a számítógépek belső működésébe.</p>
-            <button><a href="italapok/computerscience.html">Tovább</a></button>
-          </div>
-          <img src="static/circuit-2.jpg" alt="circuit">
-        </div>
-
-        <div class="bal">
-          <img src="static/os-720223_1920-2.jpg" alt="os-720223_1920">
-          <div>
-            <h1>Operációs rendszerek</h1>
-            <p>Ismerje meg az operációs rendszerek alapjait, amelyek a számítógépek működésének alapját képezik. Oldalunkon bemutatjuk a legnépszerűbb operációs rendszereket, azok funkcióit és felépítését, valamint praktikus tippeket kínálunk a hatékony használatukhoz.</p>
-            <button><a href="rendszer/os.html">Tovább</a></button>
-          </div>
-        </div>
-
-        <div class="jobb">
-          <div>
-            <h1>Hálózati ismeretek</h1>
-            <p>Merüljön el a hálózati ismeretek világában, ahol a számítógépes hálózatok működésének alapjait és technológiáit ismerheti meg. Oldalunkon részletes útmutatókat és gyakorlati példákat talál a hálózati protokollokról, eszközökről és biztonsági megoldásokról, hogy jobban megértse a modern hálózatok működését.</p>
-            <button><a href="halozatok/bevhalo.html">Tovább</a></button>
-          </div>
-          <img src="static/globe-8704013_1280-2.jpg" alt="globe-8704013_1280">
-        </div>
-
-        <div class="bal">
-          <img src="static/technology-8676538_640-2.jpg" alt="technology-8676538_640">
-          <div>
-            <h1>Rendszerüzemeltetés</h1>
-            <p>Fedezze fel a rendszer-üzemeltetés világát, ahol a számítógépes rendszerek hatékony működtetésének és karbantartásának alapjait sajátíthatja el. Oldalunkon bemutatjuk a legfontosabb üzemeltetési feladatokat, eszközöket és technikákat, hogy Ön is sikeresen kezelhesse és felügyelhesse informatikai rendszereit.</p>
-            <button><a href="hor/szerverekesfelho.html">Tovább</a></button>
+        <div class="baljobb">
+          <aside id="szurke">
+            <p>#processzor</p>
+            <p>#memória</p>
+            <p>#alaplap</p>
+            <p>#GPU</p>
+            <p>#SSD</p>
+            <p>#HDD</p>
+            <p>#BIOS</p>
+            <p>#perifériák</p>
+            <p>#hűtés</p>
+            <p>#bővítőkártya</p>
+          </aside>
+          <div class="jobb">
+            <div>
+              <h1>Számítógép-tudomány</h1>
+              <p>Fedezze fel a számítógépes architektúrák világát, ahol a számítógépek működésének alapelveit és felépítését ismerheti meg. Oldalunkon részletes útmutatókat talál a processzorok, memóriarendszerek és más hardverkomponensek működéséről, hogy mélyebb betekintést nyerhessen a számítógépek belső működésébe.</p>
+              <button><a href="italapok/computerscience.html">Tovább</a></button>
+            </div>
+            <img src="static/circuit-2.jpg" alt="circuit">
           </div>
         </div>
-
-        <div class="jobb">
-          <div>
-            <h1>Elektronika</h1>
-            <p>Ismerje meg a mikroelektronika és robotika izgalmas világát, ahol a miniatűr elektronikai alkatrészek és intelligens gépek tervezésének alapjait sajátíthatja el. Oldalunkon részletes útmutatókat és projektötleteket talál, amelyek segítenek elindulni a mikroelektronikai áramkörök és robotikai rendszerek tervezésében és építésében.</p>
-            <button><a href="elektronika/elektr.html">Tovább</a></button>
+        
+        <div class="baljobb">
+          <aside id="lila">
+            <p>#Windows</p>
+            <p>#Linux</p>
+            <p>#macOS</p>
+            <p>#kernel</p>
+            <p>#parancssor</p>
+            <p>#GUI</p>
+            <p>#rendszerfrissítés</p>
+            <p>#virtualizáció</p>
+            <p>#biztonsági mentés</p>
+            <p>#rendszerbeállítások</p>
+          </aside>
+          <div class="bal">
+            <img src="static/os-720223_1920-2.jpg" alt="os-720223_1920">
+            <div>
+              <h1>Operációs rendszerek</h1>
+              <p>Ismerje meg az operációs rendszerek alapjait, amelyek a számítógépek működésének alapját képezik. Oldalunkon bemutatjuk a legnépszerűbb operációs rendszereket, azok funkcióit és felépítését, valamint praktikus tippeket kínálunk a hatékony használatukhoz.</p>
+              <button><a href="rendszer/os.html">Tovább</a></button>
+            </div>
           </div>
-          <img src="static/hand-7014643_1920-2.jpg" alt="hand-2-7014643_1920">
         </div>
 
-        <div class="bal">
-          <img src="static/laptop-5714421_640-2.jpg" alt="laptop-5714421_640">
-          <div>
-            <h1>Irodai szoftverek</h1>
-            <p>Fedezze fel az irodai szoftverek széleskörű lehetőségeit, amelyek megkönnyítik a mindennapi munkavégzést és növelik a hatékonyságot. Oldalunkon bemutatjuk a legnépszerűbb irodai programokat, azok funkcióit és használatát, hogy Ön is profi módon kezelhesse a dokumentumokat, táblázatokat és prezentációkat.</p>
-            <button><a href="office/office.html">Tovább</a></button>
+        <div class="baljobb">
+          <aside id="sarga">
+            <p>#TCP/IP</p>
+            <p>#router</p>
+            <p>#switch</p>
+            <p>#LAN</p>
+            <p>#WAN</p>
+            <p>#Wi-Fi</p>
+            <p>#Ethernet</p>
+            <p>#IP-cím</p>
+            <p>#DNS</p>
+            <p>#hálózati biztonság</p>
+          </aside>
+          <div class="jobb">
+            <div>
+              <h1>Hálózati ismeretek</h1>
+              <p>Merüljön el a hálózati ismeretek világában, ahol a számítógépes hálózatok működésének alapjait és technológiáit ismerheti meg. Oldalunkon részletes útmutatókat és gyakorlati példákat talál a hálózati protokollokról, eszközökről és biztonsági megoldásokról, hogy jobban megértse a modern hálózatok működését.</p>
+              <button><a href="halozatok/bevhalo.html">Tovább</a></button>
+            </div>
+            <img src="static/globe-8704013_1280-2.jpg" alt="globe-8704013_1280">
+          </div>
+        </div>
+
+        <div class="baljobb">
+          <aside id="zold">
+            <p>#szerver</p>
+            <p>#monitoring</p>
+            <p>#naplózás</p>
+            <p>#biztonsági mentés</p>
+            <p>#rendszerfrissítés</p>
+            <p>#felügyelet</p>
+            <p>#automatizálás</p>
+            <p>#hibaelhárítás</p>
+            <p>#távoli hozzáférés</p>
+            <p>#felhasználói fiókok</p>
+          </aside>
+          <div class="bal">
+            <img src="static/technology-8676538_640-2.jpg" alt="technology-8676538_640">
+            <div>
+              <h1>Rendszerüzemeltetés</h1>
+              <p>Fedezze fel a rendszer-üzemeltetés világát, ahol a számítógépes rendszerek hatékony működtetésének és karbantartásának alapjait sajátíthatja el. Oldalunkon bemutatjuk a legfontosabb üzemeltetési feladatokat, eszközöket és technikákat, hogy Ön is sikeresen kezelhesse és felügyelhesse informatikai rendszereit.</p>
+              <button><a href="hor/szerverekesfelho.html">Tovább</a></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="baljobb">
+          <aside id="piros">
+            <p>#áramkör</p>
+            <p>#multiméter</p>
+            <p>#oszcilloszkóp</p>
+            <p>#Arduino</p>
+            <p>#Raspberry</p>
+            <p>#MicroBit</p>
+            <p>#robotika</p>
+            <p>#drónok</p>
+            <p>#mesterséges intelligencia</p>
+            <p>#okosotthon</p>
+          </aside>
+          <div class="jobb">
+            <div>
+              <h1>Elektronika</h1>
+              <p>Ismerje meg a mikroelektronika és robotika izgalmas világát, ahol a miniatűr elektronikai alkatrészek és intelligens gépek tervezésének alapjait sajátíthatja el. Oldalunkon részletes útmutatókat és projektötleteket talál, amelyek segítenek elindulni a mikroelektronikai áramkörök és robotikai rendszerek tervezésében és építésében.</p>
+              <button><a href="elektronika/elektr.html">Tovább</a></button>
+            </div>
+            <img src="static/hand-7014643_1920-2.jpg" alt="hand-2-7014643_1920">
+          </div>
+        </div>
+
+        <div class="baljobb">
+          <aside id="citrom">
+            <p>#szövegszerkesztő</p>
+            <p>#táblázatkezelő</p>
+            <p>#prezentáció</p>
+            <p>#e-mail kliens</p>
+            <p>#naptár</p>
+            <p>#projektmenedzsment</p>
+            <p>#feladatkezelő</p>
+            <p>#PDF</p>
+            <p>#felhőalapú tárolás</p>
+            <p>#kollaborációs eszközök</p>
+          </aside>
+          <div class="bal">
+            <img src="static/laptop-5714421_640-2.jpg" alt="laptop-5714421_640">
+            <div>
+              <h1>Irodai szoftverek</h1>
+              <p>Fedezze fel az irodai szoftverek széleskörű lehetőségeit, amelyek megkönnyítik a mindennapi munkavégzést és növelik a hatékonyságot. Oldalunkon bemutatjuk a legnépszerűbb irodai programokat, azok funkcióit és használatát, hogy Ön is profi módon kezelhesse a dokumentumokat, táblázatokat és prezentációkat.</p>
+              <button><a href="office/office.html">Tovább</a></button>
+            </div>
           </div>
         </div>
       </section>
