--- a/1-italapok/logmuv.html
+++ b/1-italapok/logmuv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Logikai műveletek és kifejezések</title>
+    <title>Számítógép-tudomány</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">Logikai műveletek és kifejezések</h1>
+      <h1 class="italapok">Számítógép-tudomány</h1>
     </header>
 
     <main>
