--- a/1-italapok/babbage.html
+++ b/1-italapok/babbage.html
@@ -42,6 +42,49 @@
       </aside>
       <section>
         <h1>A számítógép</h1>
+
+        <p>Charles Babbage neve összefonódott a modern számítástechnika születésével. Ő volt az első, aki olyan gépeket tervezett, amelyek nem csupán egyszerű matematikai műveleteket tudtak elvégezni, hanem programozhatóak is voltak, ezáltal képesek voltak komplex számítási feladatok végrehajtására. Babbage munkássága és az általa tervezett gépek, valamint Ada Lovelace-nek, a világ első programozójának szerepe alapvető fontosságúak voltak a számítógépek történetének alakulásában.</p>
+
+        <h3>Charles Babbage: A számítógépek úttörője</h3>
+
+        <p>Charles Babbage (1791-1871) brit matematikus, filozófus és mérnök, a "számítógép atyja" néven vált ismertté. Munkássága során Babbage különböző mechanikus számológépeket tervezett, de legnagyobb eredménye a számítógép koncepciójának megalkotása volt. Két fő gépe, a Difference Engine és az Analytical Engine, a modern számítógépek előfutárainak tekinthetők.</p>
+
+        <h3>The Difference Engine</h3>
+
+        <p>Babbage első jelentős projektje a Difference Engine volt, amelyet az 1820-as években kezdett el tervezni. A Difference Engine egy mechanikus számológép volt, amely a differenciák módszerét alkalmazva volt képes táblázatok generálására, például trigonometrikus, logaritmikus vagy más matematikai függvények alapján. A gép képes lett volna automatikusan és pontosan elvégezni ezeket a számításokat, így kiküszöbölve az emberi hibákat.</p>
+
+        <p>Babbage gépe mechanikus fogaskerekekből és tengelyekből állt, és elvileg képes lett volna nagyszámú műveletet végrehajtani. Azonban a gép komplexitása és az akkori technológia korlátai miatt a Difference Engine soha nem készült el teljesen. Azonban a gép tervei később alapjául szolgáltak egy másik gép, az Analytical Engine tervezéséhez.</p>
+
+        <h3>The Analytical Engine</h3>
+
+        <p>Az Analytical Engine volt Babbage legnagyobb és legfontosabb találmánya, amely az 1830-as években kezdett formát ölteni. Ez a gép már nem csak egy egyszerű mechanikus számológép volt, hanem egy valódi programozható számítógép. Az Analytical Engine különböző részekből állt: egy "malom", amely a számításokat végezte, egy "raktár", amely az adatokat tárolta, valamint egy lyukkártyás vezérlőrendszer, amely lehetővé tette a gép programozását.</p>
+
+        <p>Babbage tervei szerint az Analytical Engine képes lett volna bármilyen aritmetikai műveletet elvégezni, és ezek alapján bármilyen algoritmust végrehajtani. A gép egyik legnagyobb újítása az volt, hogy programozható volt, azaz a felhasználó lyukkártyák segítségével különböző utasításokat adhatott a gépnek. Ez az alapelv, hogy a gép képes különböző feladatokat végrehajtani egy előre megírt program alapján, alapja lett a modern számítógépek működésének.</p>
+
+        <p>Bár az Analytical Engine soha nem épült meg Babbage életében, tervei és elképzelései rendkívül előremutatóak voltak, és nagy hatással voltak a későbbi számítógépek fejlődésére.</p>
+
+        <h3>Ada Lovelace: Az első programozó</h3>
+
+        <p>Ada Lovelace (1815-1852), Lord Byron lánya, Babbage közeli barátja és munkatársa volt, aki az első programozóként vonult be a történelembe. Lovelace nemcsak megértette Babbage gépeinek működését, hanem azt is felismerte, hogy ezek a gépek sokkal többre képesek, mint egyszerű számítások elvégzése.</p>
+
+        <p>Lovelace egyik legjelentősebb hozzájárulása a számítástechnikához az volt, hogy megírta az első algoritmust, amelyet Babbage Analytical Engine-jére terveztek. Ez az algoritmus egy Bernoulli-számok kiszámítására szolgáló program volt, amelyet Lovelace egy 1843-ban publikált jegyzetében írt le. Ezzel Lovelace a világ első programozója lett, és ő volt az első, aki felismerte, hogy a számítógépek nemcsak matematikai műveletek elvégzésére alkalmasak, hanem bármilyen más logikai folyamatot is végrehajthatnak.</p>
+
+        <p>Lovelace látomása szerint a számítógépek képesek lennének zenét komponálni, grafikákat készíteni és szövegeket elemezni, ha megfelelő algoritmusokat kapnának. Ez a gondolat a számítástechnika egyik alapvető elve lett, amely a mai napig meghatározza a számítógépek felhasználási lehetőségeit.</p>
+
+        <h3>Számológép vs. Számítógép: Mi a különbség?</h3>
+
+        <p>A számológépek és a számítógépek közötti alapvető különbség az, hogy míg a számológépek csak adott matematikai műveletek végrehajtására képesek, addig a számítógépek programozhatóak, vagyis képesek különböző feladatokat végrehajtani a nekik adott utasítások (programok) alapján.</p>
+
+        <ul>
+          <li>Számológép: A számológép egy olyan eszköz, amely adott műveletek elvégzésére szolgál, például összeadás, kivonás, szorzás és osztás. A számológép működése kötött és nem változtatható; azaz a felhasználó csak azokat a műveleteket tudja végrehajtani, amelyeket a gép tervezése megenged.</li>
+          <li>Számítógép: A számítógép ezzel szemben egy univerzális eszköz, amelyet programozni lehet. A programozhatóság azt jelenti, hogy a számítógép képes végrehajtani bármilyen algoritmust, amit a felhasználó betáplál. Ez lehet matematikai művelet, adatfeldolgozás, szövegszerkesztés, vagy akár komplex grafikus műveletek is. A számítógép egyik legnagyobb előnye a sokoldalúság, hiszen ugyanaz a hardver különböző feladatok elvégzésére is alkalmas lehet.</li>
+        </ul>
+
+        <p>A számítógép tehát nem csupán egy fejlettebb számológép, hanem egy teljesen új típusú gép, amely képes adaptálódni különböző feladatokhoz a programok révén. Babbage és Lovelace munkája ezen a téren forradalmi volt, és megalapozta a modern számítástechnika alapjait.</p>
+
+        <h3>Összegzés</h3>
+
+        <p>Charles Babbage és Ada Lovelace a számítástechnika úttörői, akik munkájuk során lefektették a modern számítógépek elméleti alapjait. Babbage gépei, különösen az Analytical Engine, olyan koncepciókat valósítottak meg, amelyek a mai számítógépek alapját képezik, míg Lovelace felismerte a programozásban rejlő lehetőségeket és a számítógépek univerzális alkalmazhatóságát. Az ő munkájuk jelentette az átmenetet a mechanikus számológépek világából a programozható számítógépek korszakába, megnyitva az utat a számítástechnika modern formája előtt.</p>
       </section>
     </main>
 
